--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,7 @@ body
 
 section
 {
-    background-color: rgba(204, 185, 184, 0.1);
+    background-color: rgba(224, 206, 205, 0.1);
 }
 
 /* HEADER */
@@ -628,6 +628,21 @@ footer
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    display: block;
+    background-color: #0e1b1f;
+    position: relative;
+}
+
+footer::before
+{
+    content: "";
+    background-image: url("../img/pattern2.png");
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
@@ -640,8 +655,202 @@ footer
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
+    background-color: #FFF;
+    box-shadow: 0 0px 30px 0 rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     align-items: center;
     padding: 80px 60px;
+    position: relative;
+}
+
+.footer__subscribe input
+{
+    width: 400px;
+    height: 50px;
+    border-radius: 0.5rem 0 0 0.5rem;
+    padding: 20px;
+    border: 1px solid #FFF;
+}
+
+.footer__subscribe input:hover
+{
+    border: 1px #F55F8D solid;
+}
+
+.footer__subscribe button
+{
+    height: 50px;
+    width: 80px;
+    border-radius: 0 0.5rem 0.5rem 0;
+    background-image: linear-gradient(to right, #F55F8D, #F8AE56 50%, #F55F8D 100%);
+    background-size: 200%;
+    transition-duration: .5s;
+    cursor: pointer;
+    color: white;
+    border: none;
+}
+
+.footer__subscribe button:hover
+{
+    background-position: right center;
+}
+
+.footer__subscribe button:hover i
+{
+    animation: animateLeftToRight .5s forwards;
+}
+
+@keyframes animateLeftToRight {
+    49% {
+        transform: translateX(100%);
+    }
+    50% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
     
+.footer__list
+{
+    color: white;
+    margin-top: 80px;
+    display: flex;
+    position: relative;
+}
+
+
+.footer__list ul
+{
+    margin-top: 20px;
+} 
+
+.footer__contact
+{
+    margin-right: 40px;
+}
+
+.footer__contact li
+{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.footer__contact li i
+{
+    width: 35px;
+    height: 35px;
+    background: linear-gradient(to right, #F55F8D, #F8AE56 50%, #F55F8D 100%);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
+    margin-right: 10px;
+}
+
+.footer__items
+{
+    margin-right: 125px;
+}
+
+/* OUR LINKS COLUMN */
+.footer__items:nth-of-type(2)
+{
+    margin-right: 250px;
+}
+
+.footer__items h3
+{
+    font-size: 30px;
+    padding-bottom: 10px;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.footer__items h3::before, h3::after
+{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 25px;
+    height: 5px;
+    background: linear-gradient(to right, #F55F8D, #F8AE56 50%, #F55F8D 100%);
+    background-size: 200%;
+    border-radius: 5px;
+}
+
+.footer__items h3::after
+{
+    width: 60px;
+    left: 35px;
+}
+
+.footer__item a
+{
+    text-decoration: none;
+    color: #636363;
+    transition: all 0.5s;
+}
+
+.footer__item a:hover
+{
+    color: white;
+}
+
+.footer__item
+{
+    list-style: none;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.footer__item i
+{
+    margin-right: 10px;
+}
+
+.footer__copyright
+{
+    background-color: #1F343B;
+}
+
+.footer__copyright__content
+{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: relative;
+}
+
+.footer__copyright__text p
+{
+    color: white;
+}
+
+.footer__copyright__text p span
+{
+    color:#F55F8D;
+}
+
+.footer__media a
+{
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    padding: 10px;
+    transition: all 0.5s;
+}
+
+.footer__media a:hover
+{
+    background: #F55F8D;
+}
+
+.footer__media i
+{
+    color: white;
+    font-size: 20px;
 }
