--- a/css/index.css
+++ b/css/index.css
@@ -496,6 +496,24 @@ header .btn-common
     position: relative;
 }
 
+.portfolio__detail__item::before {
+  content: "";
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 100%);
+  transform: skewX(-25deg);
+  transition: all 0.75s;
+  opacity: 0;
+}
+
+.portfolio__detail__item:hover::before {
+  left: 125%;
+  opacity: 1;
+}
+
 .portfolio__detail__overlay
 {
     background-color: rgba(0, 0, 0, 0.4);
@@ -555,14 +573,6 @@ header .btn-common
     padding-bottom: 80px;
     text-align: center;
 }
-
-.blog__content
-{
-    /* display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px; */
-}
-
 
 .blog__item
 {   
